syntax = "proto3";

option go_package = "./coins";

import "google/protobuf/empty.proto";

message CreateCoinRequest {
   string Description = 1;
   string Short = 2;
}

message CreateCoinResponse {
   int32 ID = 1;
   string Description = 2;
   string Short = 3;
}

message DeleteCoinRequest {
   int32 ID = 1;
}

message ActiveCoinsResponse {
   repeated CreateCoinResponse ActiveCoins = 1;
}

service CoinService {
   rpc CreateCoin(CreateCoinRequest) returns (CreateCoinResponse){}
   rpc DeleteCoin(DeleteCoinRequest) returns (google.protobuf.Empty){}
   rpc ListActiveCoins(google.protobuf.Empty) returns (ActiveCoinsResponse){}
}

